test_case/rust-lang_rust/55613_435659291.rs
plain
travis_time:end:1268595c:start=1541325419258707739,finish=1541325475375889734,duration=56117181995
$ git checkout -qf FETCH_HEAD
travis_fold:end:git.checkout

Encrypted environment variables have been removed for security reasons.
See https://docs.travis-ci.com/user/pull-requests/#Pull-Requests-and-Security-Restrictions
$ export SCCACHE_BUCKET=rust-lang-ci-sccache2
$ export SCCACHE_REGION=us-west-1
Setting environment variables from .travis.yml
$ export IMAGE=x86_64-gnu-llvm-5.0
---
[00:49:26] .................................................................................................... 3900/4989
[00:49:29] .................................................................................................... 4000/4989
[00:49:32] .................................................................................................... 4100/4989
[00:49:35] .....................................................................................i.............. 4200/4989
[00:49:40] .........................................................................................F.......... 4300/4989
[00:49:47] .................................................................................................... 4500/4989
[00:49:51] ...........................................................i........................................ 4600/4989
[00:49:54] .................................................................................................... 4700/4989
[00:50:00] .................................................................................................... 4900/4989
[00:50:00] .................................................................................................... 4900/4989
compile_fail,E0599\nstruct Mouth;\n\nlet x = Mouth;\nx.chocolate(); // error: no method named `chocolate` found for type `Mouth`\n               //        in the current scope\n